samples/_failures_safe/1761317726_6d083f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be318cef.c: In function ‘tokenize’:
./samples/SAFE/__tmp_be318cef.c:159:5: error: expected expression at end of input
  159 |     if (token_count <
      |     ^~
./samples/SAFE/__tmp_be318cef.c:159:5: error: expected declaration or statement at end of input
